Wed Mar 13 15:17:51 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/*.h doc/* python/*: applied another cleanup comment
	  diff from Heiko W. Rupp, regenerated the API and python

Wed Mar 13 13:41:19 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-76.xml
	  tests/general/Makefile.am tests/general/bug-76.*: added a 
	  home brewed test for path computation elmininating duplicate
	  in result sets.

Sat Mar  9 11:53:39 CET 2002 Daniel Veillard <daniel@veillard.com>

	* doc/Makefile.am: fixed a build problem in some environements

2002-03-08  jacob berkman  <jacob@ximian.com>

	* python/Makefile.am (libxsltmodule_la_SOURCES): remove $(srcdir)
	as make will automatically look there for these files

Fri Mar  8 17:44:31 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt/xsltwin32config.h: preparing release
	  1.0.13
	* doc/*: updated and rebuilt the docs
	* python/libxslt.c: fixed a possible reentrancy problem

Fri Mar  8 14:51:59 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: Fixes the problems exposed by #73880
	  those ought to be computed at stylesheet compile time, not
	  at run-time, and the computation was wrong.
	* libxslt/transform.c: get rid of fake nodes coming from node-set
          transformations. At least if they are still produced they will
	  become easy to spot as resulting document won't be well-formed.

Thu Mar  7 17:01:21 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c: fixed bug #73791 related to extension
	  function declared in included stylesheets
	* tests/exslt/functions/function.7.*: added specific test

Thu Mar  7 15:20:32 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-75.xml
	  tests/general/Makefile.am tests/general/bug-75.*: added a 
	  specific example for bug #72150 in the regression tests

Thu Mar  7 15:17:21 CET 2002 Daniel Veillard <daniel@veillard.com>
